[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/objects/Gun.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/characters/player/Player.gd" type="Script" id=3]
[ext_resource path="res://art/day_3/tiles_objects.png" type="Texture" id=4]
[ext_resource path="res://art/day_3/shield.png" type="Texture" id=5]
[ext_resource path="res://scenes/characters/player/MegaGun.gd" type="Script" id=6]
[ext_resource path="res://scenes/_shared/HurtBox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 32, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 12.5
}, {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "explode",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "drown",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 8 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 6 )

[node name="Player" type="Area2D" groups=["players"]]
collision_mask = 4
input_pickable = false
monitorable = false
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Shield" type="Sprite" parent="."]
visible = false
texture = SubResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="Gun" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -12 )
Bullet = ExtResource( 2 )
cooldown = 0.16

[node name="MegaGun" type="Node" parent="."]
script = ExtResource( 6 )

[node name="HurtBox" parent="." instance=ExtResource( 7 )]
collision_mask = 10

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 7 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="hurt" from="HurtBox" to="." method="_on_HurtBox_hurt"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]

[editable path="HurtBox"]
